@@ -1,3 +1,10 @@
+
+2014-03-03  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
+
+	* common.* : Rewriting cob_sig_handler, printing caught signal to stderr,
+		adding cob_reg_sighnd for registration of external signal handling
+
+2014-01-17 Ron Norman <rjn@inglenet.com>
 2013-12-26  Luke Bryan <cobcoder@users.sourceforge.net>
 
         * strings.cpp : Fix Unstring delimited by all delimiter
